<resources>
    <string name="app_name">Capstone</string>
    <string name="harga">Harga:</string>
    <string name="nama">Nama:</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail_obat">Detail Obat</string>
    <string name="informasi">Informasi Lebih Lanjut</string>
    <string name="dosis">Dosis</string>
    <string name="efek_samping">Efek Samping</string>
    <string name="aturan">Aturan</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="more">More</string>
    <string name="rekomendasi_obat">Rekomendasi Obat</string>
    <string name="list_semua_obat">List Semua Obat</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="apotek_malaka">Apotek Malaka</string>
    <string name="admin_aktif">Admin Aktif</string>
    <string name="jadwal_buka">Buka Setiap Hari</string>
    <string name="pembayaran_cod">Menerima Pembayaran COD</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="_081261394158">081261394158</string>
    <string name="icon_google">Icon Google</string>
    <string name="icon_facebook">Icon_Facebook</string>

    <string name="sign_in_to_apoteku">Sign in to Apoteku</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="text_klik_sigup">New to Apoteku? Create an account.</string>
    <string name="create_new_account_here">Create new Account Here</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="back_to_sig_in">back to sig in</string>
    <string name="admin">Admin</string>
    <string name="chat_admin">Chat Admin</string>

</resources>