<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".usersigin.ui.SignupActivity">

  <LinearLayout

      android:id="@+id/linearLayout4"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/background_blue"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="parent"
      app:layout_constraintEnd_toStartOf="parent"
      app:layout_constraintRight_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="22dp"
        tools:ignore="UselessParent">

      <TextView
          style="@style/TextAppearance.AppCompat.Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="0dp"
          android:layout_marginBottom="5dp"
          android:gravity="start"
          android:text="@string/create_new_account_here"
          android:textAlignment="textStart"
          android:textColor="@color/white"
          android:textSize="21sp" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          app:hintTextColor="@color/white"
          android:background="#30ffffff"
          android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:background="#30ffffff"
          app:hintTextColor="@color/white"
          android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_no_telephone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mobile_number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:background="#30ffffff"
          app:hintTextColor="@color/white"
          android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/address"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:background="#30ffffff"
          app:hintTextColor="@color/white"
          android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="10dp"
          android:background="#30ffffff"
          app:hintTextColor="@color/white"
          android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/btn_sign_up"
          android:layout_width="210dp"
          android:layout_height="40dp"
          android:layout_marginTop="30dp"
          android:background="@color/button_sigin"
          android:text="@string/sign_up"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="@color/colorWhite"
          android:textSize="13sp" />
    </LinearLayout>
  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/back_to_sign_in"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:contentDescription="@string/back_to_sig_in"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

</androidx.constraintlayout.widget.ConstraintLayout>